--- a/login.html
+++ b/login.html
@@ -17,23 +17,18 @@
 
     <!-- formulario de ingreso a la pagina -->
     <div class="form-login">
-
         <h2>Inicio de sesion</h2>
-
         <label for="nombre-usuario">Email</label><br>
         <input type="text" id="nombre-usuario" name="nombre-usuario"><br><br>
         <label for="password">Contraseña</label><br>
         <input type="password" id="password"><br><br>
         <button class="form-login-submit" type="button" id="button" onclick="login()">Registrarme</button><br>
-
     </div>
 
     <!-- footer generico ya existente -->
     <footer class="text-muted">
         <div class="container">
-            <p class="float-end">
-                <a href="#">Volver arriba</a>
-            </p>
+            <p class="float-end"><a href="#">Volver arriba</a></p>
             <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a
                     Programar</a> -
                 2022</p>
