--- a/cart.html
+++ b/cart.html
@@ -23,21 +23,21 @@
           <h4>Articulos a comprar</h4>
           <div id="main" class="row">
             <div class="row">
-              <div class="col"></div>
-              <div class="col fw-bold">Nombre</div>
-              <div class="col fw-bold">Costo</div>
-              <div class="col fw-bold">Cantidad</div>
-              <div class="col fw-bold">Subtotal</div>
-              <div class="col"></div>
+              <div class="col-4 col-md-2 mb-1"></div>
+              <div class="col-4 col-md-2 mb-1 fw-bold">Nombre</div>
+              <div class="col-4 col-md-2 mb-1 fw-bold">Costo</div>
+              <div class="col-4 col-md-2 mb-1 fw-bold">Cantidad</div>
+              <div class="col-4 col-md-2 mb-1 fw-bold">Subtotal</div>
+              <div class="col-4 col-md-2 mb-1"></div>
             </div>
             <hr size="5" style="opacity:1;">
             <div class="row">
-              <div class="col" id="image"></div>
-              <div class="col" id="name"></div>
-              <div class="col" id="unitCost"></div>
-              <div class="col"><input type="number" id="cantidad" min="0" value="1"></input></div>
-              <div class="col fw-bold" id="subTotal"></div>
-              <div class="col"></div>
+              <div class="col-4 col-md-2 mb-1" id="image"></div>
+              <div class="col-4 col-md-2 mb-1" id="name"></div>
+              <div class="col-4 col-md-2 mb-1" id="unitCost"></div>
+              <div class="col-4 col-md-2 mb-1"><input type="number" id="cantidad" min="0" value="1" class="form-control"></input></div>
+              <div class="col-4 col-md-2 mb-1 fw-bold" id="subTotal"></div>
+              <div class="col-4 col-md-2 mb-1"></div>
             </div>
             <hr class="mt-2">
           </div>
