entrega 6.1 en proceso

--- a/cart.html
+++ b/cart.html
@@ -55,12 +55,12 @@
         <div class="row">
           <h4 class="mb-3">Direccion de envio</h4>
           <div class="col-md-6 mb-3">
-            <label for="productName">Calle</label>
-            <input type="text" class="form-control" id="productName" value="" name="productName">
+            <label for="productStreet">Calle</label>
+            <input type="text" class="form-control" id="productStreet" value="" name="productStreet">
           </div>
           <div class="col-md-4 mb-3">
-            <label for="productName">Numero</label>
-            <input type="text" class="form-control" id="productName" value="" name="productName">
+            <label for="productNumber">Numero</label>
+            <input type="text" class="form-control" id="productNumber" value="" name="productNumber">
           </div>
           <div class="col-md-6 mb-3">
             <label for="productName">Esquina</label>
@@ -83,14 +83,14 @@
           <div class="row m-1">
             <div class="col-4">Costo de envio<br>Segun el tipo de envio</div>
             <div class="col-4"></div>
-            <div class="col-4 text-end">USD 456</div>
+            <div class="col-4 text-end" id="costoEnvio"></div>
           </div>
         </div>
         <div class="border rounded-bottom">
           <div class="row m-1">
             <div class="col-4">Total</div>
             <div class="col-4"></div>
-            <div class="col-4 text-end"><b>USD 1456</b></div>
+            <div class="col-4 text-end" id="total"><b></b></div>
           </div>
         </div>
       </div>
