entrega 6.1 (falta tipo envio)

--- a/cart.html
+++ b/cart.html
@@ -90,7 +90,7 @@
           <div class="row m-1">
             <div class="col-4">Total</div>
             <div class="col-4"></div>
-            <div class="col-4 text-end" id="total"><b></b></div>
+            <div class="col-4 text-end" id="total"></div>
           </div>
         </div>
       </div>
