--- a/cart.html
+++ b/cart.html
@@ -39,15 +39,15 @@
         <div class="mb-3">
           <div class="custom-control custom-radio">
             <input id="goldradio" name="publicationType" type="radio" class="custom-control-input" checked=""
-              required="">
+              required="" value="15">
             <label class="custom-control-label" for="goldradio">Premium 2 a 5 dias (15%)</label>
           </div>
           <div class="custom-control custom-radio">
-            <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" required="">
+            <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" required="" value="7">
             <label class="custom-control-label" for="premiumradio">Express 5 a 8 dias (7%)</label>
           </div>
           <div class="custom-control custom-radio">
-            <input id="standardradio" name="publicationType" type="radio" class="custom-control-input" required="">
+            <input id="standardradio" name="publicationType" type="radio" class="custom-control-input" required="" value="5">
             <label class="custom-control-label" for="standardradio">stándard 12 a 15 dias (5%)</label>
           </div>
         </div>
